--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -25,23 +25,26 @@
         <div class="header header-1">
             <img src="../header-gallery/img/bear cave.png" alt="Image" style="width: 50px; height: 50px;">
             Welcome to the Bear Cave
-        </div>
+            <button type="button" class="btn btn-outline-primary">Home</button>
+<button type="button" class="btn btn-outline-secondary">Settings</button>
+<button type="button" class="btn btn-outline-info">Info</button>
+     </div><br>
         <div class="header header-2">
             <img src="../header-gallery/img/grizzly eat.png" alt="Image" style="width: 50px; height: 50px;">
             Grizzly's eat
-        </div>
+        </div><br>
         <div class="header header-3">
             <img src="../header-gallery/img/panda bamboo.png" alt="Image" style="width: 50px; height: 50px;">
             Panda's Bamboo
-        </div>
+        </div><br>
         <div class="header header-4">
             <img src="../header-gallery/img/ice bear snow.png" alt="Image" style="width: 50px; height: 50px;">
             Ice Bear's snow World
-        </div>
+        </div><br>
         <div class="header header-5">
             <img src="../header-gallery/img/together.png" alt="Image" style="width: 50px; height: 50px;">
             Together We Bear
-        </div>
+        </div><br>
     </section>
     <section>
         <h2>Animated Header WE BARE BEARS</h2>
